selfhost/tests/neg/callarg.ail
// EXPECT: argument 1 to 'f' expects i64, got str
fn f(a:i64) -> i64 { a }
f("hi")
